--- a/AlienShooter/AlienShooter.csproj
+++ b/AlienShooter/AlienShooter.csproj
@@ -51,6 +51,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Level.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource1.Designer.cs">
@@ -58,7 +59,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource1.resx</DependentUpon>
     </Compile>
-    <Compile Include="Unit.cs" />
+    <Compile Include="Unit.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="UnitFrames.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -97,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="res\zergl-full.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\marine_full.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
