--- a/AlienShooter/AlienShooter.csproj
+++ b/AlienShooter/AlienShooter.csproj
@@ -104,6 +104,9 @@
   <ItemGroup>
     <None Include="res\marine_full.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\hex.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
